# primer-design-ing

./: .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  Primer Designing.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
api/: main.py
app/: streamlit_app.py
primer_designer/: __init__.py  blast_engine.py  cli.py  conserved_region_detector.py  export_manager.py  msa_engine.py  pipeline_runner.py  primer_generator.py  scoring_engine.py  secondary_structure.py  sequence_validator.py  specificity_checker.py  thermodynamics.py
tests/: test_api.py  test_blast_engine.py  test_cli.py  test_conserved_region_detector.py  test_export_manager.py  test_integration_pipeline.py  test_msa_engine.py  test_primer_generator.py  test_primer_generator_enhanced.py  test_scoring_engine.py  test_secondary_structure.py  test_sequence_validator.py  test_specificity_checker.py  test_thermodynamics.py
