[project]
name = "primer-designer"
version = "0.1.0"
description = "Research-grade PCR primer design pipeline (minimal MVP)"
requires-python = ">=3.12"
authors = [ { name = "M Muzaffar Hussain", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "biopython>=1.83",
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "reportlab>=4.0",
  "streamlit>=1.30",
  "loguru>=0.7",
  "rich>=13.0",
  "pydantic>=2.5",
  "click>=8.1",
  "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
